-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.12.0-rc1
-
None
-
-
fb56c82abf8e1af7d1b03b93b1eafda02c548f1b (qt-creator/qt-creator/4.12)
This issue can be reproduced in any Qbs project when clicking on Build -> Build for Run Configuration XYZ.
Crash report:
Thread 1 "qtcreator" received signal SIGSEGV, Segmentation fault. ProjectExplorer::ProjectExplorerPlugin::<lambda()>::operator() (__closure=<optimized out>) at /home/qt/work/build/qt-creator/src/plugins/projectexplorer/projectexplorer.cpp:1571
projectexplorer.cpp:1570+:
ProjectNode * const productNode = runConfig->productNode();
QTC_ASSERT(productNode->isProduct(), return);
Looks like runConfig->productNode() returns a null pointer and Qt Creator crashes before evaluating the assert.
| For Gerrit Dashboard: QTCREATORBUG-23841 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 296780,2 | QbsProjectManager: Fix one more build key inconsistency | 4.12 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |